--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
   ios-workflow:
     name: iOS Workflow
-    # instance_type: mac_mini
+    instance_type: mac_mini_m1
     max_build_duration: 120
     environment:
       groups:
@@ -30,13 +30,6 @@ workflows:
       - name: Get Flutter packages
         script: |
           cd . && flutter packages pub get
-      - name: Flutter analyze
-        script: |
-          cd . && flutter analyze
-      - name: Flutter unit tests
-        script: |
-          cd . && flutter test
-        ignore_failure: true
       - name: Install pods
         script: |
           find . -name "Podfile" -execdir pod install \;
