--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,12 +4,14 @@ workflows:
     instance_type: mac_mini_m1
     max_build_duration: 120
     environment:
+    ios_signing:
+      distribution_type: app_store
+      bundle_identifier: io.codemagic.marijan.expononejected
       groups:
         - appstore_credentials
       vars:
         XCODE_WORKSPACE: "Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
-        BUNDLE_ID: "io.codemagic.marijan.expononejected" # <-- Put your bundle id here
         APP_STORE_ID: 1626085712 # <-- Use the TestFlight Apple id number (An automatically generated ID assigned to your app) found under General > App Information > Apple ID.
       flutter: stable
       xcode: latest
@@ -18,9 +20,6 @@ workflows:
       - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
         script: |
           keychain initialize
-      - name: Fetch signing files
-        script: |
-          app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --create
       - name: Use system default keychain
         script: |
           keychain add-certificates
